On another fix for displaying user on mobile

--- a/app/styles/repository.scss
+++ b/app/styles/repository.scss
@@ -86,7 +86,7 @@
         li.user-item {
           a {
             .user-login-data {
-              font-size: 17px;
+              font-size: 16px;
             }
             .user-score-data {
               position: absolute;
