--- a/app/styles/userList.scss
+++ b/app/styles/userList.scss
@@ -70,7 +70,7 @@
       li.user-item {
         a {
           .user-login-data {
-            font-size: 17px;
+            font-size: 16px;
           }
           .user-score-data {
             position: absolute;
